css/style.css
---
---

html {
	font-size: 20px;
}

body {
  --main-background-color: #f9f9f9;
  --content-background-color: #ffffff;
  --poster: url("/images/banner.jpg");
  --poster-10-1: url("/images/banner-10-1.jpg");
  --poster-6-1: url("/images/banner-6-1.jpg");
  --footer-border-color: #e8e8e8;
  --main-text-color: #212529;
  --secondary-text-color: {{ site.color-grey }};
  --link-color: {{ site.color-grey }};
  --link-active-color: #666666;
  --top-banner-background-color: rgba(255, 255, 255, 0.7);
  --top-banner-border-color: rgba(255, 255, 255, 0.4);
  --my-icon: url("/images/logo.png");
  --navbar-toggler-icon: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(0,0,0, 0.5)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
  --navbar-toggler-hover-color: rgba(255, 255, 255, 0.3);
  --navbar-toggler-active-color: rgba(255, 255, 255, 0.6);
  --navbar-link-color: #666666; /*rgba(0.4,0.4,0.4,1);*/
  --navbar-link-hover-color: #333333;
  --header-1-color: #017100;
  --header-2-color: #800000;
  --header-3-color: #AAAAAA;
  --header-4-color: {{ site.color-green }};
  --header-5-color: {{ site.color-red }};
  --header-6-color: {{ site.color-grey }};
  background-color: var(--main-background-color);
  color: var(--main-text-color);
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 200;
  padding: 0;
  line-height: 1.5;
}
body strong { font-weight: 400; }
body.darkmode {
  --main-background-color: hsl(240,8%,2%);
  --content-background-color: hsl(240,20%,5%);
  --poster: url("/images/banner-darkmode.jpg");
  --footer-border-color: #e8e8e8;
  --main-text-color: hsl(34, 3%, 95%); /*#212529;*/
  --secondary-text-color: {{ site.color-grey }};
  --link-color: hsl(34, 30%, 80%);
  --link-active-color: hsl(34, 53%, 86%);
  --top-banner-background-color: hsla(240,100%,7%,0.4);
  --top-banner-border-color: hsla(240,100%,7%,0.3);
  --my-icon: url("/images/logo-darkmode.png");
  --navbar-toggler-icon: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(208, 196, 180,1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
  --navbar-toggler-hover-color: rgba(255, 255, 255, 0.1);
  --navbar-toggler-active-color: rgba(255, 255, 255, 0.3);
  --navbar-link-color: hsl(34, 23%, 76%); /*rgba(0.4,0.4,0.4,1);*/
  --navbar-link-hover-color: hsl(34, 53%, 86%);
  --header-1-color: hsl(159,50%,40%); /* from rgb(102,204,169) */
  --header-2-color: rgb(255,182,143);
  --header-3-color: hsl(219, 50%, 66%); /* from rgb(100,149,237) */
  --header-4-color: {{ site.color-green }};
  --header-5-color: {{ site.color-red }};
  --header-6-color: {{ site.color-grey }};
}

.light-mode-button { display: none; }
.darkmode .light-mode-button { display: inline; }
.darkmode .dark-mode-button { display: none; }

header {
    display: block;
    background: var(--poster-6-1) no-repeat;
    background-attachment: fixed;
    background-position: center top;
    background-size: cover;
    height: 16.67vw;
    background-size: 100vw auto;
}

@media (min-aspect-ratio: 8/4) {
    header {
        background: var(--poster-10-1) no-repeat;
        height: 10vw;
        background-attachment: fixed;
        background-position: center top;
        background-size: cover;
        background-size: 100vw auto;
    }
}

@media (max-aspect-ratio: 4/4) {
  header {
    display: block;
    background: var(--poster) no-repeat;
    background-attachment: fixed;
    background-position: center top;
    background-size: auto 40vw;
    height: 40vw;
  }
}

a, a:visited {
    color: var(--link-color);
    text-decoration: none;
    background-color: transparent;
    font-weight: 300;
}
a:hover, a:active {
    color: var(--link-active-color);
    text-decoration: none;
    background-color: transparent;
    font-weight: 300;
}

.top-banner {
    position: fixed;
    top: 0px;
    background-color: var(--top-banner-background-color);
    border-bottom: 1pt solid var(--top-banner-border-color);
    width: 100%;
    z-index: 10;
}

.navbar {
  max-width: 50rem;
  margin-left: auto;
  margin-right: auto;
  padding: 0em 2em;
  background-color: transparent;
  border: none;
}
.navbar-light button.navbar-toggler {outline:none; margin: 0.3rem;}
.navbar-light button.navbar-toggler:hover {background-color: var(--navbar-toggler-hover-color);}
.navbar-light button.navbar-toggler:active {background-color: var(--navbar-toggler-active-color);}
.navbar-light .navbar-nav a.nav-item {
	margin-left: 1rem;
}
.navbar-light a.navbar-brand, .navbar-light a.navbar-brand:visited, .navbar-light .navbar-nav a.nav-link, .navbar-light .navbar-nav a.nav-item:visited  {
  color: var(--navbar-link-color); /*rgba(0.4,0.4,0.4,1);*/
  text-decoration: none;
  font-weight: 300;
  font-size:1.25rem;
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 100;
}
.navbar-light a.navbar-brand:hover, .navbar-light .navbar-nav a.nav-link:hover  {
	color: var(--navbar-link-hover-color);
}
.navbar-light .navbar-toggler-icon {
    background-image: var(--navbar-toggler-icon);
}


.banner-icon {
  float: left;
  height: 1.8rem;
  width: 1.8rem;
  background-size: 1.8rem 1.8rem;
  margin-right: 0.5rem;
  background-image: var(--my-icon);
}


.container {
	padding: 0;
}

.flag {
  height: 1.2rem;
  width: 1.5rem;
  border: none;
  border-radius: 0;
  margin-right: 0.3rem;
}
.darkmode .flag {
    filter: sepia(.5);
}

.body {
  background-color: var(--content-background-color);
  padding: 4em 2em;
  min-height: 400px;
}

.footer{
  border-top:1px solid var(--footer-border-color)
  background-color: var(--main-background-color);
  padding: 1em 2em;
}

.content {
  max-width: 40rem;
  margin-left: auto;
  margin-right: auto;
}
.content .col-xs-1, .content .col-sm-1, .content .col-md-1, .content .col-lg-1, .content .col-xs-2, .content .col-sm-2, .content .col-md-2, .content .col-lg-2, .content .col-xs-3, .content .col-sm-3, .content .col-md-3, .content .col-lg-3, .content .col-xs-4, .content .col-sm-4, .content .col-md-4, .content .col-lg-4, .content .col-xs-5, .content .col-sm-5, .content .col-md-5, .content .col-lg-5, .content .col-xs-6, .content .col-sm-6, .content .col-md-6, .content .col-lg-6, .content .col-xs-7, .content .col-sm-7, .content .col-md-7, .content .col-lg-7, .content .col-xs-8, .content .col-sm-8, .content .col-md-8, .content .col-lg-8, .content .col-xs-9, .content .col-sm-9, .content .col-md-9, .content .col-lg-9, .content .col-xs-10, .content .col-sm-10, .content .col-md-10, .content .col-lg-10, .content .col-xs-11, .content .col-sm-11, .content .col-md-11, .content .col-lg-11, .content .col-xs-12, .content .col-sm-12, .content .col-md-12, .content .col-lg-12 {
  position: relative;
  min-height: 1px;
  padding-left: 0;
  padding-right: 0;
}
h1 {
  color: var(--header-1-color);
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 100;
  font-size: 2rem;
  margin-top: 1rem;
}
h2 {
  color: var(--header-2-color);
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 100;
  font-size: 1.5rem;
}
h3 {
  color: var(--header-3-color);
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 100;
  font-size: 1.5rem;
}
h4 {
  color: var(--header-4-color);
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 100;
  font-size: 2rem;
}
h5 {
  color: var(--header-5-color);
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 100;
  font-size: 1.5rem;
}
h6 {
  color: var(--header-6-color);
  font-family: 'Roboto', 'Open Sans', 'Helvetica Neue', sans-serif ;
  font-weight: 100;
  font-size: 1.5rem;
}

table { margin-top: .5rem; }

p { margin-bottom: 0.5rem; }
.date-text p { margin-bottom: 1rem; }

.date-text {
  display: flex;
  margin-bottom: -0.5rem;
}
.date-column {
  text-align: right;
  margin-right: .8rem;
  flex-grow: 0;
  flex-shrink: 0;
  flex-basis: 8rem;
}
@media (max-width: 767px) {
  .date-text {
    display: block;
    margin-bottom: 0;
  }
  .date-text .date-column {
    float: left;
    width: auto;
    margin-bottom: 0;
    margin-right: .5rem;
    text-align: right;
    color: var(--secondary-text-color);
  }
  .date-column:empty {
    display: none;
  }
}

@media (max-width: 767px) {
  html {
    font-size: 16px;
  }
  .body {
    padding: 2em 1.5em;
  }
  .footer{
    padding: 1em 1em;
  }
  a,a:visited {
    font-weight: 400;
  }
  a:hover, a:active {
    font-weight: 400; 
  }
  .navbar {
    padding-left: 1em;
    padding-right: 1em;
  }
  .navbar-light a.navbar-brand, .navbar-light a.navbar-brand:visited, .navbar-light .navbar-nav a.nav-item, .navbar-light .navbar-nav a.nav-item:visited  {
    font-family: 'Open Sans', 'Helvetica Neue', sans-serif ;
    font-weight: 200;
  }
  .md-up {
	display: none;
  }
  .footer .col-2,.footer .col-10 { padding-left: 0; padding-right: 0; }
  .top-banner {
      border-bottom: 0.5pt solid var(--top-banner-border-color);
  }
}

@media (max-width: 575px) {
  .sm-up {
	display: none;
  }
}

@media (max-width: 399px) {
  #footer-envelope {
	display: none;
  }
}

.alenvers { unicode-bidi: bidi-override; direction: rtl; }

.tooltip {
  visibility: hidden;
}
.tooltip-inner {
    max-width: 1000px;
    padding: 15px;
}
.tooltip .tooltip-inner {
    background-color: white;
    color: black;
    border: solid 1px #ccc;
    border-radius: 1rem;
    text-align: left;
}
.tooltip .arrow::before {
    border-top-color: #ccc;
}
.tip-content {
    display: none;
}
.tooltip-inner img { max-width: 93vw; }



.navbar-toggler:focus {
    box-shadow: none;
}
@media (max-width: 575px) {
    .navbar-toggler-icon {
        width: 1em;
        height: 1em;
    }
    .navbar-toggler {
        padding: 0px 2px 0px 2px;
    }
}


.main-page-portrait {
    float: right;
    width: 200px;
    max-width: 40vw;
    margin-left: 5px;
}

